<resources>
    <string name="app_name">CriminalIntent</string>

    <!-- Crime List Fragment -->
    <string name="empty_crime_list_add_crime_button">Add Crime</string>
    <string name="empty_crime_list_text_view">There are currently no crimes recorded. Press the add crime button below to enter a crime.</string>

    <!-- Crime Fragment Strings -->
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="call_suspect">Call Suspect</string>
    <string name="dial_number">Dial number via</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s!
     The Crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>


    <!-- Crime Item List Strings -->
    <string name="crime_list_crime_title">Crime Title</string>
    <string name="crime_list_crime_date">Crime Date</string>
    <string name="crime_list_call_police">Call Police!</string>
    <string name="crime_list_solved_crime_image">Solved!</string>
    <string name="crime_list_date_time_string">%1$s at %2$s</string>

    <!-- Activity Crime Pager Strings -->
    <string name="first_crime_button">First Crime</string>
    <string name="last_crime_button">Last Crime</string>

    <!-- Date Picker Dialog Strings -->
    <string name="date_picker_title">Date of crime:</string>

    <!-- Time Picker Dialog Strings -->
    <string name="time_picker_title">Time of crime:</string>

    <!-- Menu Strings -->
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d</string>
    <string name="delete_button">Delete Crime</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%1$d Crime</item>
        <item quantity="other">%1$d Crimes</item>
    </plurals>

    <!-- Delete Crime Dialog -->
    <string name="delete_crime_title">Delete Crime?</string>
    <string name="delete_crime_messsage">Crime will be lost forever. Are you sure you want to delete it?</string>
    <string name="delete_crime_positive_button">Delete</string>
    <string name="delete_crime_negative_button">Cancel</string>
</resources>

